Closed
Bug 201103
Opened 23 years ago
Closed 23 years ago
Trunk M140RC1 crash [@ nsXBLPrototypeHandler::GetEventName]
Categories
(Core :: XBL, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jay, Assigned: bryner)
Details
(Keywords: crash, qawanted, topcrash)
Crash Data
Attachments
(2 files)
|
30.19 KB,
text/plain
|
Details | |
|
1.58 KB,
patch
|
john
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
This is a topcrasher for Mozilla 1.4 Alpha. There are also a few crashes on the
MozillaTrunk. Here is the latest from Talkback:
(7) 25 nsXBLPrototypeHandler::GetEventName
BBID range: 18716186 - 18881160
Secs since last crash: 87 (min) - 392992 (max)
Total Runtime: 87 (min) - 392992 (max)
Crash date range: 2003-04-02 to 2003-04-06
Crash date range: 2003040105 to 2003040105
Unique Users: 25
Stack Trace:
nsXBLPrototypeHandler::GetEventName
[c:/builds/seamonkey/mozilla/content/xbl/src/nsXBLPrototypeHandler.cpp line 457]
nsXBLEventHandler::DoGeneric
[c:/builds/seamonkey/mozilla/content/xbl/src/nsXBLEventHandler.h line 105]
nsXBLXULHandler::PopupShown
[c:/builds/seamonkey/mozilla/content/xbl/src/nsXBLXULHandler.cpp line 121]
nsEventListenerManager::HandleEvent
[c:/builds/seamonkey/mozilla/content/events/src/nsEventListenerManager.cpp line
2111]
nsXULElement::HandleDOMEvent
[c:/builds/seamonkey/mozilla/content/xul/content/src/nsXULElement.cpp line 3337]
PresShell::HandleDOMEventWithTarget
[c:/builds/seamonkey/mozilla/layout/html/base/src/nsPresShell.cpp line 6353]
nsPopupSetFrame::OnCreated
[c:/builds/seamonkey/mozilla/layout/xul/base/src/nsPopupSetFrame.cpp line 700]
nsPopupSetFrame::ShowPopup
[c:/builds/seamonkey/mozilla/layout/xul/base/src/nsPopupSetFrame.cpp line 399]
nsPopupBoxObject::ShowPopup
[c:/builds/seamonkey/mozilla/layout/xul/base/src/nsPopupBoxObject.cpp line 194]
XPTC_InvokeByIndex
[c:/builds/seamonkey/mozilla/xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp
line 102]
XPCWrappedNative::CallMethod
[c:/builds/seamonkey/mozilla/js/src/xpconnect/src/xpcwrappednative.cpp line 2025]
XPC_WN_CallMethod
[c:/builds/seamonkey/mozilla/js/src/xpconnect/src/xpcwrappednativejsops.cpp
line 1293]
js_Invoke [c:/builds/seamonkey/mozilla/js/src/jsinterp.c line 845]
js_Interpret [c:/builds/seamonkey/mozilla/js/src/jsinterp.c line 2832]
js_Invoke [c:/builds/seamonkey/mozilla/js/src/jsinterp.c line 861]
js_InternalInvoke [c:/builds/seamonkey/mozilla/js/src/jsinterp.c line 936]
JS_CallFunctionValue [c:/builds/seamonkey/mozilla/js/src/jsapi.c line 3529]
nsJSContext::CallEventHandler
[c:/builds/seamonkey/mozilla/dom/src/base/nsJSEnvironment.cpp line 1068]
nsJSEventListener::HandleEvent
[c:/builds/seamonkey/mozilla/dom/src/events/nsJSEventListener.cpp line 183]
nsXBLPrototypeHandler::ExecuteHandler
[c:/builds/seamonkey/mozilla/content/xbl/src/nsXBLPrototypeHandler.cpp line 449]
nsXBLEventHandler::DoMouse
[c:/builds/seamonkey/mozilla/content/xbl/src/nsXBLEventHandler.h line 149]
nsXBLMouseHandler::MouseDown
[c:/builds/seamonkey/mozilla/content/xbl/src/nsXBLMouseHandler.cpp line 106]
nsEventListenerManager::HandleEvent
[c:/builds/seamonkey/mozilla/content/events/src/nsEventListenerManager.cpp line
1282]
nsXULElement::HandleDOMEvent
[c:/builds/seamonkey/mozilla/content/xul/content/src/nsXULElement.cpp line 3337]
PresShell::HandleEventInternal
[c:/builds/seamonkey/mozilla/layout/html/base/src/nsPresShell.cpp line 6289]
PresShell::HandleEvent
[c:/builds/seamonkey/mozilla/layout/html/base/src/nsPresShell.cpp line 6240]
nsViewManager::HandleEvent
[c:/builds/seamonkey/mozilla/view/src/nsViewManager.cpp line 2223]
nsView::HandleEvent [c:/builds/seamonkey/mozilla/view/src/nsView.cpp line 309]
nsViewManager::DispatchEvent
[c:/builds/seamonkey/mozilla/view/src/nsViewManager.cpp line 1959]
HandleEvent [c:/builds/seamonkey/mozilla/view/src/nsView.cpp line 83]
nsWindow::DispatchEvent
[c:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp line 1154]
nsWindow::DispatchWindowEvent
[c:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp line 1171]
nsWindow::DispatchMouseEvent
[c:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp line 5439]
ChildWindow::DispatchMouseEvent
[c:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp line 5694]
nsWindow::ProcessMessage
[c:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp line 4190]
nsWindow::WindowProc
[c:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp line 1438]
USER32.dll + 0x1d0a (0x77e11d0a)
USER32.dll + 0x1bc8 (0x77e11bc8)
USER32.dll + 0x1cef (0x77e11cef)
nsAppShellService::Run
[c:/builds/seamonkey/mozilla/xpfe/appshell/src/nsAppShellService.cpp line 480]
main1 [c:/builds/seamonkey/mozilla/xpfe/bootstrap/nsAppRunner.cpp line 1287]
main [c:/builds/seamonkey/mozilla/xpfe/bootstrap/nsAppRunner.cpp line 1645]
WinMain [c:/builds/seamonkey/mozilla/xpfe/bootstrap/nsAppRunner.cpp line 1666]
WinMainCRTStartup()
KERNEL32.DLL + 0x1ca90 (0x77e9ca90)
Source File:
c:/builds/seamonkey/mozilla/content/xbl/src/nsXBLPrototypeHandler.cpp line : 457
(18843048) URL: www.cnn.com
(18843048) Comments: loading page
(18842372) Comments: i've just clicked on a JS-Link which should do
document.location.href=http://... then he crashed :/
(18836452) Comments: Clicking on the address bar
(18794422) Comments: Clicked the typed url history arrow
(18755153) URL: www.mozillazine.org
(18755153) Comments: Switch to mozillazine.org open URL combo box switch to
other window (KDE3.1's Konqueror file browser) the mozilla combo box was still
drawn in the window (over Konqueror window). Then switched again to mozilla
window and reopened URL combo box hoping
(18755153) Comments: the other one will dissappear. It dissappeared but
mozilla crashed one moment later.
(18734503) Comments: Gawd knows just clicked on something
(18724096) Comments: i had a tab that i couldnt close !!! with about:blank in
the URL-field and http://www.heise.de/... (dont remember) in the tab-name field
- page was blank. when i clicked on the URL pull-down menu to select a previous
entered URL -> crash
Adding crash, topcrash keywords and qawanted to see if we can get this
reproduced. I will attach a full set of Talkback reports grouped by different
stacks soon.
| Reporter | ||
Comment 1•23 years ago
|
||
These crashes are grouped by unique stack traces to help debug the issue by
separating different user comments/urls and stacks.
| Reporter | ||
Comment 2•23 years ago
|
||
Still a topcrasher...a lot of crashes with Mozilla 1.4 RC1. Here are a few sets
of crashes from M140RC1:
Rank StackSignature Count
14 nsXBLPrototypeHandler::GetEventName 41
201103 NEW hyatt@mozilla.org --- 2003-04-08
Source File :
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/content/xbl/src/nsXBLPrototypeHandler.cpp
line : 457
====================================================================================================
Count Offset Real Signature
[ 7 nsXBLPrototypeHandler::GetEventName 9c2ba926 -
nsXBLPrototypeHandler::GetEventName ]
[ 3 nsXBLPrototypeHandler::GetEventName 3c0dfc78 -
nsXBLPrototypeHandler::GetEventName ]
[ 2 nsXBLPrototypeHandler::GetEventName 7486fbbe -
nsXBLPrototypeHandler::GetEventName ]
[ 1 nsXBLPrototypeHandler::GetEventName fb883054 -
nsXBLPrototypeHandler::GetEventName ]
[ 1 nsXBLPrototypeHandler::GetEventName e9e86e04 -
nsXBLPrototypeHandler::GetEventName ]
[ 1 nsXBLPrototypeHandler::GetEventName 9ac14c23 -
nsXBLPrototypeHandler::GetEventName ]
Crash date range: 2003-05-31 to 2003-06-09
Min/Max Seconds since last crash: 65 - 207726
Min/Max Runtime: 65 - 207726
Count Platform List
15 Windows NT 5.0 build 2195
Count Build Id List
15 2003052908
No of Unique Users 15
Stack trace(Frame)
nsXBLPrototypeHandler::GetEventName
[d:/builds/seamonkey/mozilla/content/xbl/src/nsXBLPrototypeHandler.cpp line 457]
nsXBLEventHandler::DoGeneric
[d:/builds/seamonkey/mozilla/content/xbl/src/nsXBLEventHandler.h line 105]
nsXBLXULHandler::PopupShown
[d:/builds/seamonkey/mozilla/content/xbl/src/nsXBLXULHandler.cpp line 91]
nsEventListenerManager::HandleEvent
[d:/builds/seamonkey/mozilla/content/events/src/nsEventListenerManager.cpp line
2111]
nsXULElement::HandleDOMEvent
[d:/builds/seamonkey/mozilla/content/xul/content/src/nsXULElement.cpp line 3302]
PresShell::HandleDOMEventWithTarget
[d:/builds/seamonkey/mozilla/layout/html/base/src/nsPresShell.cpp line 6461]
nsPopupSetFrame::OnCreated
[d:/builds/seamonkey/mozilla/layout/xul/base/src/nsPopupSetFrame.cpp line 700]
nsPopupSetFrame::ShowPopup
[d:/builds/seamonkey/mozilla/layout/xul/base/src/nsPopupSetFrame.cpp line 399]
nsPopupBoxObject::ShowPopup
[d:/builds/seamonkey/mozilla/layout/xul/base/src/nsPopupBoxObject.cpp line 194]
XPTC_InvokeByIndex
[d:/builds/seamonkey/mozilla/xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp
line 102]
XPCWrappedNative::CallMethod
[d:/builds/seamonkey/mozilla/js/src/xpconnect/src/xpcwrappednative.cpp line 2025]
XPC_WN_CallMethod
[d:/builds/seamonkey/mozilla/js/src/xpconnect/src/xpcwrappednativejsops.cpp
line 1285]
js_Invoke [d:/builds/seamonkey/mozilla/js/src/jsinterp.c line 845]
js_Interpret [d:/builds/seamonkey/mozilla/js/src/jsinterp.c line 2854]
js_Invoke [d:/builds/seamonkey/mozilla/js/src/jsinterp.c line 861]
js_InternalInvoke [d:/builds/seamonkey/mozilla/js/src/jsinterp.c line 936]
JS_CallFunctionValue [d:/builds/seamonkey/mozilla/js/src/jsapi.c line 3529]
nsJSContext::CallEventHandler
[d:/builds/seamonkey/mozilla/dom/src/base/nsJSEnvironment.cpp line 1114]
nsJSEventListener::HandleEvent
[d:/builds/seamonkey/mozilla/dom/src/events/nsJSEventListener.cpp line 183]
nsXBLPrototypeHandler::ExecuteHandler
[d:/builds/seamonkey/mozilla/content/xbl/src/nsXBLPrototypeHandler.cpp line 449]
nsXBLEventHandler::DoMouse
[d:/builds/seamonkey/mozilla/content/xbl/src/nsXBLEventHandler.h line 149]
nsXBLMouseHandler::MouseDown
[d:/builds/seamonkey/mozilla/content/xbl/src/nsXBLMouseHandler.cpp line 81]
nsEventListenerManager::HandleEvent
[d:/builds/seamonkey/mozilla/content/events/src/nsEventListenerManager.cpp line
1282]
nsXULElement::HandleDOMEvent
[d:/builds/seamonkey/mozilla/content/xul/content/src/nsXULElement.cpp line 3302]
PresShell::HandleEventInternal
[d:/builds/seamonkey/mozilla/layout/html/base/src/nsPresShell.cpp line 6389]
PresShell::HandleEvent
[d:/builds/seamonkey/mozilla/layout/html/base/src/nsPresShell.cpp line 6320]
nsViewManager::HandleEvent
[d:/builds/seamonkey/mozilla/view/src/nsViewManager.cpp line 2314]
nsView::HandleEvent [d:/builds/seamonkey/mozilla/view/src/nsView.cpp line 308]
nsViewManager::DispatchEvent
[d:/builds/seamonkey/mozilla/view/src/nsViewManager.cpp line 2050]
HandleEvent [d:/builds/seamonkey/mozilla/view/src/nsView.cpp line 82]
nsWindow::DispatchEvent
[d:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp line 1057]
nsWindow::DispatchWindowEvent
[d:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp line 1074]
nsWindow::DispatchMouseEvent
[d:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp line 5190]
ChildWindow::DispatchMouseEvent
[d:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp line 5445]
nsWindow::ProcessMessage
[d:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp line 4029]
nsWindow::WindowProc
[d:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp line 1337]
USER32.dll + 0x2a244 (0x77e3a244)
USER32.dll + 0x45e5 (0x77e145e5)
USER32.dll + 0xa792 (0x77e1a792)
nsAppShellService::Run
[d:/builds/seamonkey/mozilla/xpfe/appshell/src/nsAppShellService.cpp line 479]
main1 [d:/builds/seamonkey/mozilla/xpfe/bootstrap/nsAppRunner.cpp line 1284]
main [d:/builds/seamonkey/mozilla/xpfe/bootstrap/nsAppRunner.cpp line 1650]
WinMain [d:/builds/seamonkey/mozilla/xpfe/bootstrap/nsAppRunner.cpp line 1672]
WinMainCRTStartup()
KERNEL32.dll + 0x2847c (0x77ea847c)
(20856927) URL: www.hotmail.com
(20738755) Comments: I was changing the prefences for Mozilla and when I
click "okay" I got this lovely form to fill out.
(20715562) URL: http://www.hkgolden.com
(20715562) Comments: I was trying to pull down the location bar menu when
it failed suddenly
(20713298) URL: ibm.com
(20713298) Comments: Clicked URL history drop-down
(20644758) URL: www.google.com
(20644758) Comments: I was closing mail then the browser. Did not navigate
to a site I just set up an email account and set some options.
(20641295) URL: slashdot.org
(20641295) Comments: clicking some hyperlinks. Also the images on the site
do not show.
(20639990) Comments: I entered words to search for in the address field but
instead of clicking on the search button i simply hit enter. Mozilla crashed
immediately after showing the "no valid url" error message dialog.
====================================================================================================
Count Offset Real Signature
[ 7 nsXBLPrototypeHandler::GetEventName 7d420c46 -
nsXBLPrototypeHandler::GetEventName ]
[ 2 nsXBLPrototypeHandler::GetEventName e6ebd114 -
nsXBLPrototypeHandler::GetEventName ]
[ 1 nsXBLPrototypeHandler::GetEventName e36542dd -
nsXBLPrototypeHandler::GetEventName ]
[ 1 nsXBLPrototypeHandler::GetEventName 9670e6d7 -
nsXBLPrototypeHandler::GetEventName ]
Crash date range: 2003-05-31 to 2003-06-09
Min/Max Seconds since last crash: 184 - 88697
Min/Max Runtime: 184 - 88697
Count Platform List
11 Windows NT 5.1 build 2600
Count Build Id List
11 2003052908
No of Unique Users 11
Stack trace(Frame)
nsXBLPrototypeHandler::GetEventName
[d:/builds/seamonkey/mozilla/content/xbl/src/nsXBLPrototypeHandler.cpp line 457]
nsXBLEventHandler::DoGeneric
[d:/builds/seamonkey/mozilla/content/xbl/src/nsXBLEventHandler.h line 105]
nsXBLXULHandler::Command
[d:/builds/seamonkey/mozilla/content/xbl/src/nsXBLXULHandler.cpp line 81]
nsEventListenerManager::HandleEvent
[d:/builds/seamonkey/mozilla/content/events/src/nsEventListenerManager.cpp line
2134]
nsXULElement::HandleDOMEvent
[d:/builds/seamonkey/mozilla/content/xul/content/src/nsXULElement.cpp line 3302]
nsXULElement::HandleDOMEvent
[d:/builds/seamonkey/mozilla/content/xul/content/src/nsXULElement.cpp line 3321]
nsXULElement::HandleDOMEvent
[d:/builds/seamonkey/mozilla/content/xul/content/src/nsXULElement.cpp line 3321]
PresShell::HandleDOMEventWithTarget
[d:/builds/seamonkey/mozilla/layout/html/base/src/nsPresShell.cpp line 6461]
nsMenuFrame::Execute
[d:/builds/seamonkey/mozilla/layout/xul/base/src/nsMenuFrame.cpp line 1719]
nsMenuFrame::HandleEvent
[d:/builds/seamonkey/mozilla/layout/xul/base/src/nsMenuFrame.cpp line 461]
PresShell::HandleEventInternal
[d:/builds/seamonkey/mozilla/layout/html/base/src/nsPresShell.cpp line 6430]
PresShell::HandleEvent
[d:/builds/seamonkey/mozilla/layout/html/base/src/nsPresShell.cpp line 6320]
nsViewManager::HandleEvent
[d:/builds/seamonkey/mozilla/view/src/nsViewManager.cpp line 2314]
nsView::HandleEvent [d:/builds/seamonkey/mozilla/view/src/nsView.cpp line 308]
nsViewManager::DispatchEvent
[d:/builds/seamonkey/mozilla/view/src/nsViewManager.cpp line 2050]
HandleEvent [d:/builds/seamonkey/mozilla/view/src/nsView.cpp line 82]
nsWindow::DispatchEvent
[d:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp line 1057]
nsWindow::DispatchWindowEvent
[d:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp line 1074]
nsWindow::DispatchMouseEvent
[d:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp line 5190]
ChildWindow::DispatchMouseEvent
[d:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp line 5445]
nsWindow::ProcessMessage
[d:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp line 4029]
nsWindow::WindowProc
[d:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp line 1337]
USER32.dll + 0x27ad7 (0x77d67ad7)
USER32.dll + 0x2ccd4 (0x77d6ccd4)
USER32.dll + 0x4455 (0x77d44455)
USER32.dll + 0x95d5 (0x77d495d5)
nsAppShellService::Run
[d:/builds/seamonkey/mozilla/xpfe/appshell/src/nsAppShellService.cpp line 479]
main1 [d:/builds/seamonkey/mozilla/xpfe/bootstrap/nsAppRunner.cpp line 1284]
main [d:/builds/seamonkey/mozilla/xpfe/bootstrap/nsAppRunner.cpp line 1650]
WinMain [d:/builds/seamonkey/mozilla/xpfe/bootstrap/nsAppRunner.cpp line 1672]
WinMainCRTStartup()
kernel32.dll + 0x214c7 (0x77e814c7)
(20882695) Comments: nothing
(20848191) Comments: Updating preferences.
(20825492) Comments: I wanted to visit planetgamecube.com but it just
stop........I was messing around with the settings
(20824692) Comments: Group of sites open in Moz. I was just going to
www.thawte.com retail site.
(20657609) URL: msn.com
(20635472) URL: http://www.yahoo.com
(20635472) Comments: clicked on link ofr yahoo.com on personal toolbar.
Browser crashed just as page had finished loading.
====================================================================================================
Count Offset Real Signature
[ 5 nsXBLPrototypeHandler::GetEventName cf391b5e -
nsXBLPrototypeHandler::GetEventName ]
[ 1 nsXBLPrototypeHandler::GetEventName efa668b3 -
nsXBLPrototypeHandler::GetEventName ]
Crash date range: 2003-05-31 to 2003-06-09
Min/Max Seconds since last crash: 149 - 23636
Min/Max Runtime: 149 - 23636
Count Platform List
6 Windows NT 5.1 build 2600
Count Build Id List
6 2003052908
No of Unique Users 6
Stack trace(Frame)
nsXBLPrototypeHandler::GetEventName
[d:/builds/seamonkey/mozilla/content/xbl/src/nsXBLPrototypeHandler.cpp line 457]
nsXBLEventHandler::DoGeneric
[d:/builds/seamonkey/mozilla/content/xbl/src/nsXBLEventHandler.h line 105]
nsXBLXULHandler::PopupHidden
[d:/builds/seamonkey/mozilla/content/xbl/src/nsXBLXULHandler.cpp line 101]
nsEventListenerManager::HandleEvent
[d:/builds/seamonkey/mozilla/content/events/src/nsEventListenerManager.cpp line
2117]
nsXULElement::HandleDOMEvent
[d:/builds/seamonkey/mozilla/content/xul/content/src/nsXULElement.cpp line 3302]
PresShell::HandleDOMEventWithTarget
[d:/builds/seamonkey/mozilla/layout/html/base/src/nsPresShell.cpp line 6461]
nsPopupSetFrame::OnDestroyed
[d:/builds/seamonkey/mozilla/layout/xul/base/src/nsPopupSetFrame.cpp line 753]
nsPopupSetFrame::OpenPopup
[d:/builds/seamonkey/mozilla/layout/xul/base/src/nsPopupSetFrame.cpp line 540]
nsPopupSetFrame::DestroyPopup
[d:/builds/seamonkey/mozilla/layout/xul/base/src/nsPopupSetFrame.cpp line 446]
nsMenuPopupFrame::DismissChain
[d:/builds/seamonkey/mozilla/layout/xul/base/src/nsMenuPopupFrame.cpp line 2049]
nsMenuDismissalListener::Rollup
[d:/builds/seamonkey/mozilla/layout/xul/base/src/nsMenuDismissalListener.cpp
line 115]
nsWindow::DealWithPopups
[d:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp line 1277]
nsWindow::WindowProc
[d:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp line 1306]
USER32.dll + 0x27ad7 (0x77d67ad7)
USER32.dll + 0x2ccd4 (0x77d6ccd4)
USER32.dll + 0x4455 (0x77d44455)
USER32.dll + 0x95d5 (0x77d495d5)
nsAppShellService::Run
[d:/builds/seamonkey/mozilla/xpfe/appshell/src/nsAppShellService.cpp line 479]
main1 [d:/builds/seamonkey/mozilla/xpfe/bootstrap/nsAppRunner.cpp line 1284]
main [d:/builds/seamonkey/mozilla/xpfe/bootstrap/nsAppRunner.cpp line 1650]
WinMain [d:/builds/seamonkey/mozilla/xpfe/bootstrap/nsAppRunner.cpp line 1672]
WinMainCRTStartup()
kernel32.dll + 0x214c7 (0x77e814c7)
(20834145) Comments: listending to mp3 with quicktime plugin and changing
prefs. also looking at list of sites in adress bar
(20820400) Comments: nothing
I have tried to reproduce using the urls and comments...but have not been able
to. I'm guessing this crash might have something to do with changes preferences
while browsing or loading a site.
Summary: Trunk M140A crash [@ nsXBLPrototypeHandler::GetEventName] → Trunk M140RC1 crash [@ nsXBLPrototypeHandler::GetEventName]
| Assignee | ||
Comment 3•23 years ago
|
||
I think I found a reasonably reliable way to reproduce this, on win32:
Open prefs, go to Debug -> Events, disable XUL cache
Click OK
Open the URL history dropdown
Result: crash
I'm not sure how relevant disabling the XUL cache is... hopefully end-users
aren't doing this.
Comment 4•23 years ago
|
||
We should change the name of that pref in the 1.4 final build (which is what I had
intended to do some time ago, and stupidly let slide).
| Assignee | ||
Comment 6•23 years ago
|
||
This should fix these crashes (which I believe are a result of XBLDocumentInfos
being flushed from the XUL cache).
What I've done here is caused the XBLDocumentInfos to be added to the binding
manager table of each bound document in addition to being placed in the XUL
cache. Previously, they were only added to the binding manager table if the
XUL cache was disabled. This is certainly the simplest fix for the problem;
the question is whether it impacts performance or memory usage significantly.
I did some tests and found no measurable change in pageload time, window open
time, startup time, or memory usage (measuring one Navigator window open with
www.mozilla.org loaded).
| Assignee | ||
Updated•23 years ago
|
Attachment #126075 -
Flags: superreview?(bzbarsky)
Attachment #126075 -
Flags: review?(jkeiser)
Comment 7•23 years ago
|
||
Comment on attachment 126075 [details] [diff] [review]
patch to fix crashes
> // Otherwise we put it in our binding manager's document table.
Fix that comment, and sr=me.
Attachment #126075 -
Flags: superreview?(bzbarsky) → superreview+
Updated•23 years ago
|
Attachment #126075 -
Flags: review?(jkeiser) → review+
| Assignee | ||
Comment 8•23 years ago
|
||
checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Updated•15 years ago
|
Crash Signature: [@ nsXBLPrototypeHandler::GetEventName]
You need to log in
before you can comment on or make changes to this bug.
Description
•