Always add nsXBLDocumentInfos to the bound document's binding manager, even if we also put it in the XUL cache. This prevents crashes when the XUL cache is flushed (bug 201103). r=jkeiser, sr=bzbarsky.